test_case/rust-lang_rust/54308_425209179_51.rs
compile_fail,E0603\nmod SomeModule {\n    const PRIVATE: u32 = 0x_a_bad_1dea_u32; // This const is private, so we\n                                            // can't use it outside of the\n                                            // `SomeModule` module.\n}\n\nprintln!(\"const value: {}\", SomeModule::PRIVATE); // error: constant `PRIVATE`\n                                                  //        is private\n